<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_dialog"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/fragment_dialog_title_edittext"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_dialog_title_edittext_hint"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/fragment_dialog_snippet_edittext"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_dialog_snippet_edittext_hint"
        android:textAlignment="center" />

    <Button
        android:id="@+id/fragment_dialog_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_dialog_ok_button_text"
        android:layout_gravity="center"/>

</LinearLayout>